# KETI-CSD-Metric-Interface

./: CMakeLists.txt  README.md  csd-metric-interface-grpc.cc  csd-metric-interface-server-grpc.cc  csd-metric-interface-tcpip  ip_config.h
cmake/: common.cmake
proto/: csd-to-metric-collector-grpc.proto
